# hc32l110_lib

./: .gitignore  LICENSE  README.md  Untitled-1.jl  a.out.elf  ar.txt  blink.elf  blink.elf.all  blink.elf.dump  build.ps1  calculator.html  commands.txt  gcc-arm-eabi.cmake  hc32_sdk.cmake  hc32l110_boot.c.elf  hc32l110x6.ld  out.elf.dump
calculator/: index.html  model.js
driver/inc/: hc32l110_basic_timers.h  hc32l110_core.h  hc32l110_interrupts.h  hc32l110_ports.h  hc32l110_rtc.h
driver/src/: CMakeLists.txt  hc32l110_basic_timer.c  hc32l110_core.c  hc32l110_interrupts.c  hc32l110_ports.c  hc32l110_rtc.c
lib/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  gcc-arm-eabi.cmake
lib/include/: bt.h  hc32_common.h  hc32l110.h  hc32l110_cmsis.h  hc32l110_ddl.h  hc32l110_ddl_basic_timers.h  hc32l110_ddl_buffers.h  hc32l110_ddl_clock_dynamic.h  hc32l110_ddl_core.h  hc32l110_ddl_crc.h  hc32l110_ddl_debug.h  hc32l110_ddl_gpio.h  hc32l110_ddl_i2c.h  hc32l110_ddl_i2c_common.h  hc32l110_ddl_i2c_controller.h  hc32l110_ddl_interrupts.h  hc32l110_ddl_pca.h  hc32l110_ddl_rtc.h  hc32l110_ddl_spi.h  hc32l110_ddl_uart.h  hc32l110_registers.h  hc32l110_registers_advanced_timers.h  hc32l110_registers_analog_digital_converters.h  hc32l110_registers_basic_timers.h  hc32l110_registers_bt.h  hc32l110_registers_clock.h  hc32l110_registers_cmsis.h  hc32l110_registers_crc.h  hc32l110_registers_crc_bg.h  hc32l110_registers_gpio.h  hc32l110_registers_i2c.h  hc32l110_registers_i2c_spi.h  hc32l110_registers_lvd.h  hc32l110_registers_memory.h  hc32l110_registers_pca.h  hc32l110_registers_platform.h  hc32l110_registers_ports.h  hc32l110_registers_reset.h  hc32l110_registers_rtc.h  hc32l110_registers_rtc_wdt.h  (+5 more)
lib/old/: hc32_common.h  hc32l110_ddl.h  hc32l110_ddl_basic_timers.h  hc32l110_ddl_core.h  hc32l110_ddl_gpio.h  hc32l110_ddl_gpio_orig.h  hc32l110_ddl_pca.h  hc32l110_ddl_rtc.h  hc32l110_registers_basic_timers.h  hc32l110_registers_pca.h  hc32l110_registers_rtc.h
lib/src/: hc32l110_boot.c  hc32l110_ddl_basic_timers.c  hc32l110_ddl_buffers.c  hc32l110_ddl_clock_dynamic.c  hc32l110_ddl_core.c  hc32l110_ddl_debug.c  hc32l110_ddl_gpio.c  hc32l110_ddl_i2c.c  hc32l110_ddl_i2c_common.c  hc32l110_ddl_i2c_controller.c  hc32l110_ddl_pca.c  hc32l110_ddl_rtc.c  hc32l110_ddl_spi.c  hc32l110_ddl_uart.c
mcu/: CMakeLists.txt  HDSC.HC32L110.xml  blink.elf  blink.elf.dump  build.ps1  hc32l110_boot.c  hc32l110_boot.s  hc32l110_system.c  libaeabi_cortexm0.s  main.c  main.s  pwm.c  pwm.h
mcu/GCC/: .project
mcu/common/: CMakeLists.txt
mcu/common/include/: ddl_config.h  hc32_common.h  hc32l110.h  hc32l110_platform.h  hc32l110_registers.h  hc32l110_system.h  hc32l110b.h  hc32l110c.h
mcu/common/include/ddl/: hc32l110_core.h  hc32l110_crc.h  hc32l110_gpio.h  hc32l110_interrupts.h  hc32l110_rtc.h  hc32l110_uart.h
mcu/common/include/registers/: hc32l110_registers_analog_digital_converters.h  hc32l110_registers_clock.h  hc32l110_registers_i2c_spi.h  hc32l110_registers_ports.h  (+2 more)
mcu/common/link/: hc32f120x6_flash.ld  hc32f120x8_flash.ld  hc32l110x4.ld  hc32l110x6.ld
mcu/common/reference/: HC32L110C.h  links.txt
mcu/common/src/: CMakeLists.txt  hc32l110_boot.c  hc32l110_boot.s  hc32l110_core.c  hc32l110_gpio.c  hc32l110_startup.s  hc32l110_system.c
mcu/driver/: CMakeLists.txt
mcu/driver/inc/: hc32l110_basic_timers.h  hc32l110_core.h  hc32l110_crc.h  hc32l110_gpio.h  hc32l110_interrupts.h  hc32l110_ports.h  hc32l110_uart.h
mcu/driver/src/: CMakeLists.txt  hc32l110_basic_timer.c  hc32l110_core.c  hc32l110_gpio.c  hc32l110_interrupts.c  hc32l110_ports.c  hc32l110_rtc.c  hc32l110_uart.c
reference/: HDSC_HC32L110.svd  i2c_status.txt  i2c_status_codes.txt  links.txt  picoprobe_wiring.txt  pinout.txt  port_functions copy.csv  port_functions.csv  pyocd.help.txt
sdk/: CMakeLists.txt  gcc-arm-eabi.cmake
sdk/include/: buffer_template.h  hc32l110_cmsis.h  hc32l110_ddl_basic_timers.h  hc32l110_ddl_buffers.h  hc32l110_ddl_clock_dynamic.h  hc32l110_ddl_core.h  hc32l110_ddl_debug.h  hc32l110_ddl_gpio.h  hc32l110_ddl_i2c.h  hc32l110_ddl_interrupt_callback.h  hc32l110_ddl_interrupt_invocation_handler.h  hc32l110_ddl_interrupt_invocation_wrapper.h  hc32l110_ddl_rtc.h  hc32l110_ddl_timer.h  hc32l110_ddl_uart.h  hc32l110_ddl_util.h  hc32l110_registers.h  hc32l110_registers_bt.h  hc32l110_registers_clock.h  hc32l110_registers_gpio.h  hc32l110_registers_rtc_wdt.h  hc32l110_registers_spi.h  hc32l110_registers_system.h  hc32l110_registers_uart.h  hc32l110_sdk.h  hc32l110_system.h  hc32l110_system_registers.h
sdk/include/ddl/: buffer.h  gpio.h
sdk/include/ddl/core/: core.h  device.h  interrupt_handler.h  nvic.h  system_clock.h  systick.h  timer.h  timer_counter.h
sdk/include/ddl/timers/: basic_timer.h  lp_timer.h  timers.h
sdk/include/ddl/utils/: rng.h  utils.h
sdk/include/legacy/: hc32l110_ddl_clock_dynamic.h  hc32l110_ddl_debug.h  hc32l110_ddl_i2c.h  hc32l110_ddl_rtc.h  hc32l110_ddl_uart.h
sdk/include/registers/: clock.h  i2c.h  pca.h  registers.h  uart.h
sdk/lib/: libhc32l110_ddl_gpio.a.all  libhc32l110_ddl_gpio.a.dump
sdk/src/: hc32l110_basic_timer.cpp  hc32l110_boot.c  hc32l110_boot.cpp  hc32l110_ddl_basic_timers.c  hc32l110_ddl_buffers.c  hc32l110_ddl_clock_dynamic.c  hc32l110_ddl_core.c  hc32l110_ddl_core.cpp  hc32l110_ddl_debug.c  hc32l110_ddl_debug.cpp  hc32l110_ddl_gpio.c  hc32l110_ddl_gpio.cpp  hc32l110_ddl_i2c.c  hc32l110_ddl_rtc.c  hc32l110_ddl_uart.c  hc32l110_ddl_util.c  port_descriptors.txt
sdk/src/core/: device.cpp  interrupt_handler.cpp  nvic.cpp  systick.cpp
sdk/src/ddl/: gpio.cpp
sdk/src/ddl/core/: boot.cpp  device.cpp  interrupt_handler.cpp  nvic.cpp  system_clock.cpp  systick.cpp  timer_counter.cpp
sdk/src/ddl/timers/: basic_timer.cpp  lp_timer.cpp
sdk/src/ddl/utils/: rng.cpp  snprintf.c  strlen.cpp
sdk/src/timers/: basic_timer.cpp  lp_timer.cpp  timer_counter.cpp
sdk/src/util/: ddl_memset.c  ddl_rng.c  ddl_strlen.c
template/: CMakeLists.txt  hc32l110x4.ld  hc32l110x6.ld
template/src/: main.c
test/: CMakeLists.txt  main.cpp
