cmake_minimum_required(VERSION 3.19)
set (CMAKE_SYSTEM_NAME Generic)
set (CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/gcc-arm-eabi.cmake")

set (LIB_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
project(hc32l110_ddl)
include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

add_library ("${CMAKE_PROJECT_NAME}_core" "${LIB_SOURCE_DIR}/hc32l110_boot.c" "${LIB_SOURCE_DIR}/hc32l110_ddl_core.c")
add_library ("${CMAKE_PROJECT_NAME}_gpio" "${LIB_SOURCE_DIR}/hc32l110_ddl_gpio.c")
add_library ("${CMAKE_PROJECT_NAME}_basic_timers" "${LIB_SOURCE_DIR}/hc32l110_ddl_basic_timers.c")
add_library ("${CMAKE_PROJECT_NAME}_debug" "${LIB_SOURCE_DIR}/hc32l110_ddl_debug.c")
add_library ("${CMAKE_PROJECT_NAME}_i2c" "${LIB_SOURCE_DIR}/hc32l110_ddl_i2c.c")
add_library ("${CMAKE_PROJECT_NAME}_clock_dynamic" "${LIB_SOURCE_DIR}/hc32l110_ddl_clock_dynamic.c")