option(USE_DDL "enable the device driver library") 
option(USE_DDL_ALL "enable all device drivers")
option(USE_DDL_INTERRUPTS "enable the interrupts device driver")
option(USE_DDL_PORTS "enable the port function selection device driver")
option(USE_DDL_BASIC_TIMER "enable the basic timer device driver")
option(USE_DDL_CRC16 "enable the CRC16 calculation device driver")
option(USE_DDL_RTC "enable the realtime clock")
if(USE_DDL)
    target_compile_definitions(hc32l110_driver PUBLIC USE_DDL 1)
    if(USE_DDL_ALL OR USE_DDL_INTERRUPTS)
        target_compile_definitions(hc32l110_driver PUBLIC USE_DDL_INTERRUPTS 1)
    endif()
    if(USE_DDL_ALL OR USE_DDL_PORTS)
        target_compile_definitions(hc32l110_driver PUBLIC USE_DDL_PORTS 1)
    endif()
    if(USE_DDL_ALL OR USE_DDL_BASIC_TIMER)
        target_compile_definitions(hc32l110_driver PUBLIC USE_DDL_BASIC_TIMER 1)
    endif()  
    if(USE_DDL_ALL OR USE_DDL_CRC16)
        target_compile_definitions(hc32l110_driver PUBLIC USE_DDL_CRC16 1)
    endif()   
    if(USE_DDL_RTC OR USE_DDL_CRC16)
        target_compile_definitions(hc32l110_driver PUBLIC USE_DDL_CRC16 1)
    endif()   
    add_subdirectory(src)

endif()
