set(hc32l110_driver_SOURCES)
if(USE_DDL)
    list(APPEND hc32l110_driver_SOURCES hc32l110_core.c)
    if(USE_DDL_ALL OR USE_DDL_PORTS)
        list(APPEND hc32l110_driver_SOURCES hc32l110_ports.c)
    endif()
    if(USE_DDL_ALL OR USE_DDL_INTERRUPTS)
        list(APPEND hc32l110_driver_SOURCES hc32l110_interrupts.c)
    endif()    
    if(USE_DDL_ALL OR USE_DDL_BASIC_TIMER)
        list(APPEND hc32l110_driver_SOURCES hc32l110_basic_timers.c)
    endif()   
    if(USE_DDL_ALL OR USE_DDL_CRC16)
        list(APPEND hc32l110_driver_SOURCES hc32l110_crc.c)
    endif()   
    if(USE_DDL_ALL OR USE_DDL_RTC)
        list(APPEND hc32l110_driver_SOURCES hc32l110_rtc.c)
    endif()          
    if(USE_DDL_ALL OR USE_DDL_BASIC_TIMER)
        list(APPEND hc32l110_driver_SOURCES hc32l110_basic_timer.c)
    endif()          
endif(USE_DDL)
add_library(hc32l110_driver static ${hc32l110_driver_SOURCES})


